docs(readme): simplify setup instructions and fix openapi path
Remove detailed jlink build instructions from README as they are now
in CLAUDE.md. Fix openapi.json path to point to root directory.